--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body{
-    background: #66BFBF;
+    background: #EAF6F6;
     font-family: "Nunito",sans-serif;
 }
 
@@ -21,13 +21,13 @@ body{
 #mainNavbar .navbar-brand{
 
     color: #EA1C2C;
-    size: 1.8rem;
-    font-weight: 100;
+    size: 2.2rem;
+    font-weight: 800;
 }
 #mainNavbar .nav-link{
-    color: white;
+    color: black;
     font-size: 1.6rem;
-    font-weight: 100;
+    font-weight: 500;
 }
 #mainNavbar .nav-link:hover{
 
@@ -56,14 +56,6 @@ color:#EA1C2C ;
     font-size: 3rem ;
 
 }
-.img-fluid{
-  width: 20px;
-  height: 200px;
-}
-.d-none_d-lg-inline {
-  width: 50px;
-    height: 30px;
-}
-.container{
-  padding-top: 20px;
+h2{
+  text-align: center;
 }
